docs: add swagger for marking rent
